core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_field_keys.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW FIELD KEYS\")"
---
TableScan: field_keys [iox::measurement:Utf8, fieldKey:Utf8, fieldType:Utf8]
