core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_measurements-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW MEASUREMENTS LIMIT 1 OFFSET 2\")"
---
Limit: skip=2, fetch=1 [iox::measurement:Dictionary(Int32, Utf8), name:Dictionary(Int32, Utf8)]
  TableScan: measurements [iox::measurement:Dictionary(Int32, Utf8), name:Dictionary(Int32, Utf8)]
