core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_measurements.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW MEASUREMENTS\")"
---
TableScan: measurements [iox::measurement:Dictionary(Int32, Utf8), name:Dictionary(Int32, Utf8)]
