core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_retention_policies-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW RETENTION POLICIES ON my_db\")"
---
This feature is not implemented: SHOW RETENTION POLICIES ON <database>
