core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_retention_policies.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW RETENTION POLICIES\")"
---
TableScan: retention policies [iox::measurement:Dictionary(Int32, Utf8), name:Utf8, duration:Utf8, shardGroupDuration:Utf8, replicaN:Int64, default:Boolean]
