core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_tag_keys_1-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW TAG KEYS LIMIT 1 OFFSET 2\")"
---
SeriesLimit: series=[iox::measurement], order=[tagKey ASC NULLS LAST], limit_expr=[tagKey RESPECT NULLS (default: Dictionary(Int32, Utf8(NULL)))], skip=UInt64(2), fetch=UInt64(1) [iox::measurement:Dictionary(Int32, Utf8), tagKey:Dictionary(Int32, Utf8);N]
  TableScan: tag_keys [iox::measurement:Dictionary(Int32, Utf8), tagKey:Dictionary(Int32, Utf8)]
