core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_tag_keys_1.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW TAG KEYS\")"
---
TableScan: tag_keys [iox::measurement:Dictionary(Int32, Utf8), tagKey:Dictionary(Int32, Utf8)]
